Correct pin mapping for using SPI

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,9 +22,13 @@ build_flags =
 	-D HAL_UART_MODULE_ENABLED
 	; -D HAL_SPI_MODULE_ENABLED
 	; -D PIO_FRAMEWORK_ARDUINO_ENABLE_CDC (THIS IS CAUSING ISSUES: NO SERIAL)
+    -D PIN_SERIAL_RX=PB7    ; Overwrite default pin used for 'Serial' (RX) instance
+    -D PIN_SERIAL_TX=PB6    ; Overwrite default pin used for 'Serial' (TX) instance
+
 lib_archive = false
 lib_deps=
     ; askuric/Simple FOC@^2.3.1
     SPI
     Wire
 	https://github.com/simplefoc/Arduino-FOC#dev
+	; https://github.com/Candas1/Arduino-FOC#g431_adc_calibration
